--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,4 @@ logging.level.org.hibernate.SQL=debug
 #show sql values
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-#jwt.secret=abcd
+jwt.secret=abcd
